# templates

./: .gitignore  LICENSE  README.md  flake.nix
packwiz/: .gitignore  cookiecutter.json  flake.nix  justfile  pack.toml
packwiz/{{cookiecutter.project_slug}}/: .packwizignore  LICENSE  flake.nix  pack.toml
python/: .gitignore  LICENSE  README.md  cookiecutter.json  flake.nix  justfile  pyproject.toml
python/{{cookiecutter.project_slug}}/: .gitignore  flake.nix  justfile  pyproject.toml
rust/: .cz.toml  Cargo.toml  cookiecutter.json  flake.nix  justfile
rust/src/: main.rs
rust/{{cookiecutter.project_slug}}/: Cargo.toml  LICENSE  flake.nix
shell/: cookiecutter.json
shell/{{cookiecutter.project_slug}}/: flake.nix
