[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.author }}/{{ cookiecutter.project_slug }}"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
